--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "anderson03AyA",
+  "name": "filmoteka",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/anderson03AyA/FilmotekaGrupo4/",
+  "homepage": "https://github.com/luisquintero32/filmoteka/",
   "scripts": {
     "start": "parcel src/index.html",
-    "build": "parcel build src/index.html --public-url /FilmotekaGrupo4/"
+    "build": "parcel build src/index.html --public-url /filmoteka/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/goitacademy/parcel-project-template.git"
+    "url": "git+https://github.com/luisquintero32/filmoteka.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "luis quintero <luispau2390@gmail.com>",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/goitacademy/parcel-project-template/issues"
+    "url": "https://github.com/luisquintero32/filmoteka/issues"
   },
   "dependencies": {
     "2": "^3.0.0",
